<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.craptordevelopers.javv.Main2Activity">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_new_chat"
        android:orderInCategory="100"
        android:title="@string/action_new_chat"
        android:icon="@drawable/ic_chat_white_48pt_3x"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/action_account"
        android:icon="@drawable/ic_account_box_white_48pt_3x"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
